...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1yc-sc-SID">
                                        <rect key="frame" x="135.66666666666666" y="134" width="104" height="36"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" title="open maps"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="buttonOpenMaps"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="openMapsButtonTriggered:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="dN6-DD-YUt"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="XX00000/XX00000" textAlignment="center" minimumFontSize="20" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="sgz-y2-sez">
                                        <rect key="frame" x="20" y="64" width="291" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" label="Coordinate input"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="nL3-6D-A4k">
                                                <variation key="heightClass=regular-widthClass=regular" constant="80"/>
...
                            <outlet property="delegate" destination="B6u-cA-hR8" id="wCT-yl-rAo"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="b1X-Fz-a3Q">
                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="done" id="OGB-3v-xex">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="buttonCloseSettings"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="closeButtonTriggered:" destination="B6u-cA-hR8" id="dQm-JG-3Hr"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
