...

enum AvailableMap {
    case AppleMaps, GoogleMaps, Waze, MapsMe, OSM, /* TomTom, */ Navigon, Garmin /* , SBB */ // => TomTom doesn't have an launchurl right now…

    // Define variables here also, for easier reading in swift
    // sorting of maps is done here also
    static let maps = ["Apple Maps", "Google Maps", "maps.me", "Waze", "OpenStreetMap", /* "TomTom", */ "Navigon", "Garmin Western Europe" /* , "SBB Mobile" */ ]
    static let count = maps.count

    static func getCase(map: String) -> AvailableMap {
        switch map {
        case "Apple Maps":
            return AvailableMap.AppleMaps
...
